--- a/documentation/injectables/DeviceService.html
+++ b/documentation/injectables/DeviceService.html
@@ -142,6 +142,7 @@
                             </li>
                             <li>
                                     <span class="modifier">Private</span>
+                                    <span class="modifier">Readonly</span>
                                 <a href="#objectName" >objectName</a>
                             </li>
                         </ul>
@@ -207,7 +208,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/services/device.service.ts:17</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/services/device.service.ts:16</a></div>
                             </td>
                         </tr>
 
@@ -270,8 +271,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="65"
-                                    class="link-to-prism">src/app/services/device.service.ts:65</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="60"
+                                    class="link-to-prism">src/app/services/device.service.ts:60</a></div>
                         </td>
                     </tr>
 
@@ -337,8 +338,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="55"
-                                    class="link-to-prism">src/app/services/device.service.ts:55</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="54"
+                                    class="link-to-prism">src/app/services/device.service.ts:54</a></div>
                         </td>
                     </tr>
 
@@ -404,8 +405,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="49"
-                                    class="link-to-prism">src/app/services/device.service.ts:49</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="48"
+                                    class="link-to-prism">src/app/services/device.service.ts:48</a></div>
                         </td>
                     </tr>
 
@@ -471,8 +472,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="30"
-                                    class="link-to-prism">src/app/services/device.service.ts:30</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="29"
+                                    class="link-to-prism">src/app/services/device.service.ts:29</a></div>
                         </td>
                     </tr>
 
@@ -508,8 +509,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="40"
-                                    class="link-to-prism">src/app/services/device.service.ts:40</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="39"
+                                    class="link-to-prism">src/app/services/device.service.ts:39</a></div>
                         </td>
                     </tr>
 
@@ -575,8 +576,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="36"
-                                    class="link-to-prism">src/app/services/device.service.ts:36</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="35"
+                                    class="link-to-prism">src/app/services/device.service.ts:35</a></div>
                         </td>
                     </tr>
 
@@ -644,8 +645,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="121"
-                                    class="link-to-prism">src/app/services/device.service.ts:121</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="116"
+                                    class="link-to-prism">src/app/services/device.service.ts:116</a></div>
                         </td>
                     </tr>
 
@@ -731,8 +732,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="114"
-                                    class="link-to-prism">src/app/services/device.service.ts:114</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="110"
+                                    class="link-to-prism">src/app/services/device.service.ts:110</a></div>
                         </td>
                     </tr>
 
@@ -798,8 +799,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="99"
-                                    class="link-to-prism">src/app/services/device.service.ts:99</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="95"
+                                    class="link-to-prism">src/app/services/device.service.ts:95</a></div>
                         </td>
                     </tr>
 
@@ -869,7 +870,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/services/device.service.ts:16</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/services/device.service.ts:15</a></div>
                         </td>
                     </tr>
 
@@ -907,7 +908,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/services/device.service.ts:21</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/services/device.service.ts:20</a></div>
                         </td>
                     </tr>
 
@@ -921,6 +922,7 @@
                     <a name="objectName"></a>
                     <span class="name">
                             <span class="modifier">Private</span>
+                            <span class="modifier">Readonly</span>
                         <span ><b>objectName</b></span>
                         <a href="#objectName"><span class="icon ion-ios-link"></span></a>
                     </span>
@@ -939,7 +941,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/services/device.service.ts:17</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/services/device.service.ts:16</a></div>
                         </td>
                     </tr>
 
@@ -954,7 +956,6 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Observable, of, throwError } from &#x27;rxjs&#x27;
 import { catchError, map, retry } from &#x27;rxjs/operators&#x27;
-import { SyncRequestClient } from &#x27;ts-sync-request/dist&#x27;
 
 import { HttpClient, HttpHeaders } from &#x27;@angular/common/http&#x27;
 import { Injectable } from &#x27;@angular/core&#x27;
@@ -968,9 +969,9 @@ import { Log, LogIn } from &#x27;./log.service&#x27;
 })
 export class DeviceService {
   baseurl &#x3D; environment.baseurl
-  private objectName &#x3D; &#x27;devices&#x27;
+  private readonly objectName &#x3D; &#x27;devices&#x27;
 
-  constructor(private http: HttpClient) {}
+  constructor(private readonly http: HttpClient) {}
 
   httpOptions &#x3D; {
     headers: new HttpHeaders({
@@ -988,7 +989,7 @@ export class DeviceService {
   }
 
   getDeviceSynchronize(id: string): Observable&lt;Device&gt; {
-    return of(new SyncRequestClient().get&lt;Device&gt;(environment.baseurl + &#x27;/&#x27; + this.objectName + &#x27;/&#x27; + id))
+    return this.http.get&lt;Device&gt;(environment.baseurl + &#x27;/&#x27; + this.objectName + &#x27;/&#x27; + id)
   }
 
   GetDeviceSynchro(id: string): Observable&lt;Device&gt; {
@@ -1008,11 +1009,7 @@ export class DeviceService {
 
   CreateDevice(data: Device): Observable&lt;Device&gt; {
     return this.http
-      .post&lt;Device&gt;(
-        environment.baseurl + &#x27;/&#x27; + this.objectName + &#x27;/&#x27;,
-        JSON.stringify(data, null, &#x27; &#x27;),
-        this.httpOptions,
-      )
+      .post&lt;Device&gt;(environment.baseurl + &#x27;/&#x27; + this.objectName + &#x27;/&#x27;, JSON.stringify(data, null, 2), this.httpOptions)
       .pipe(retry(1), catchError(this.handleErrorTemplate&lt;Device&gt;(&#x27;CreateDevice&#x27;, data)))
   }
 
@@ -1022,6 +1019,7 @@ export class DeviceService {
       name: &#x27;&#x27;,
       modelId: &#x27;&#x27;,
       position: { x: 0, y: 0, h: 0 },
+      isDebugMode: false,
     }
     this.getDeviceSynchronize(id).subscribe((value: Device) &#x3D;&gt; {
       console.info(&#x27;Get Device: &#x27; + JSON.stringify(value, null, &#x27; &#x27;))
@@ -1071,7 +1069,6 @@ export class DeviceService {
       .pipe(retry(1), catchError(this.handleErrorTemplate&lt;Device&gt;(&#x27;postDevice&#x27;, data)))
   }
 
-  // eslint-disable-next-line @typescript-eslint/no-unused-vars
   private handleErrorTemplate&lt;T&gt;(operation: string, _result?: T) {
     return (error: Error): Observable&lt;T&gt; &#x3D;&gt; {
       console.error(&#x60;DeviceService.handleErrorTemplate operation: ${operation}, error: ${error.message}&#x60;)
@@ -1150,7 +1147,6 @@ export class DeviceService {
        <script src="../js/libs/es6-shim.min.js"></script>
        <script src="../js/libs/EventDispatcher.js"></script>
        <script src="../js/libs/promise.min.js"></script>
-       <script src="../js/libs/zepto.min.js"></script>
 
        <script src="../js/compodoc.js"></script>
 
