--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -101,51 +101,55 @@
     </ol>
     <ul class="dependencies-list">
         <li>
-            <b>@angular/animations</b> : ^18.2.0</li>
+            <b>@angular/animations</b> : ^20.0.4</li>
         <li>
-            <b>@angular/common</b> : ^18.2.0</li>
+            <b>@angular/common</b> : ^20.0.4</li>
         <li>
-            <b>@angular/compiler</b> : ^18.2.0</li>
+            <b>@angular/compiler</b> : ^20.0.4</li>
         <li>
-            <b>@angular/core</b> : ^18.2.0</li>
+            <b>@angular/core</b> : ^20.0.4</li>
         <li>
-            <b>@angular/forms</b> : ^18.2.0</li>
+            <b>@angular/forms</b> : ^20.0.4</li>
         <li>
-            <b>@angular/platform-browser</b> : ^18.2.0</li>
+            <b>@angular/platform-browser</b> : ^20.0.4</li>
         <li>
-            <b>@angular/platform-browser-dynamic</b> : ^18.2.0</li>
+            <b>@angular/platform-browser-dynamic</b> : ^20.0.4</li>
         <li>
-            <b>@angular/platform-server</b> : ^18.2.0</li>
+            <b>@angular/platform-server</b> : ^20.0.4</li>
         <li>
-            <b>@angular/router</b> : ^18.2.0</li>
+            <b>@angular/router</b> : ^20.0.4</li>
         <li>
-            <b>@compodoc/compodoc</b> : ^1.1.25</li>
+            <b>@compodoc/compodoc</b> : ^1.1.26</li>
         <li>
-            <b>@faker-js/faker</b> : ^8.4.1</li>
+            <b>@faker-js/faker</b> : ^9.8.0</li>
         <li>
-            <b>@jest/globals</b> : ^29.7.0</li>
+            <b>@jest/globals</b> : ^30.0.2</li>
         <li>
-            <b>@ng-bootstrap/ng-bootstrap</b> : ^17.0.0</li>
+            <b>@ng-bootstrap/ng-bootstrap</b> : ^19.0.0</li>
         <li>
-            <b>@octokit/core</b> : ^6.1.2</li>
+            <b>@octokit/core</b> : ^7.0.2</li>
         <li>
-            <b>bootstrap</b> : ^5.3.3</li>
+            <b>bootstrap</b> : ^5.3.7</li>
         <li>
-            <b>bootstrap-icons</b> : ^1.11.3</li>
+            <b>bootstrap-icons</b> : ^1.13.1</li>
         <li>
             <b>browserify-zlib</b> : ^0.2.0</li>
         <li>
-            <b>chalk</b> : ^5.3.0</li>
+            <b>chalk</b> : ^5.4.1</li>
         <li>
             <b>cors</b> : ^2.8.5</li>
         <li>
-            <b>date-fns</b> : ^3.6.0</li>
+            <b>date-fns</b> : ^4.1.0</li>
         <li>
             <b>depcheck</b> : ^1.4.7</li>
         <li>
-            <b>eslint-scope</b> : ^8.0.2</li>
+            <b>eslint-scope</b> : ^8.4.0</li>
         <li>
-            <b>express</b> : ^4.19.2</li>
+            <b>express</b> : ^5.1.0</li>
+        <li>
+            <b>firebase</b> : ^11.9.1</li>
+        <li>
+            <b>font-awesome</b> : ^4.7.0</li>
         <li>
             <b>https-browserify</b> : ^1.0.0</li>
         <li>
@@ -153,37 +157,33 @@
         <li>
             <b>jquery</b> : ^3.7.1</li>
         <li>
-            <b>jsdom</b> : ^24.1.1</li>
+            <b>jsdom</b> : ^26.1.0</li>
         <li>
             <b>lodash</b> : ^4.17.21</li>
         <li>
             <b>mkdirp</b> : ^3.0.1</li>
         <li>
-            <b>mongodb</b> : ^6.8.0</li>
+            <b>mongodb</b> : ^6.17.0</li>
         <li>
-            <b>nav-bar</b> : ^1.0.3</li>
+            <b>ngx-markdown</b> : ^20.0.0</li>
         <li>
-            <b>ngx-markdown</b> : ^18.0.0</li>
-        <li>
-            <b>ngx-pagination</b> : ^6.0.3</li>
-        <li>
-            <b>node-gyp</b> : ^10.2.0</li>
+            <b>node-gyp</b> : ^11.2.0</li>
         <li>
             <b>node-sass</b> : ^9.0.0</li>
         <li>
-            <b>npm-check-updates</b> : ^17.0.6</li>
-        <li>
-            <b>octokit</b> : ^4.0.2</li>
+            <b>npm-check-updates</b> : ^18.0.1</li>
         <li>
             <b>path-browserify</b> : ^1.0.1</li>
         <li>
-            <b>prismjs</b> : ^1.29.0</li>
+            <b>prismjs</b> : ^1.30.0</li>
         <li>
             <b>process</b> : ^0.11.10</li>
         <li>
             <b>rimraf</b> : ^6.0.1</li>
         <li>
-            <b>rxjs</b> : ~7.8.1</li>
+            <b>rxjs</b> : ~7.8.2</li>
+        <li>
+            <b>showdown</b> : ^2.1.0</li>
         <li>
             <b>stream</b> : ^0.0.3</li>
         <li>
@@ -197,11 +197,11 @@
         <li>
             <b>ts-sync-request</b> : ^1.4.1</li>
         <li>
-            <b>tslib</b> : ^2.6.3</li>
+            <b>tslib</b> : ^2.8.1</li>
         <li>
-            <b>winston</b> : ^3.14.2</li>
+            <b>winston</b> : ^3.17.0</li>
         <li>
-            <b>zone.js</b> : ^0.14.10</li>
+            <b>zone.js</b> : ^0.15.1</li>
     </ul>
 
 
@@ -264,7 +264,6 @@
        <script src="./js/libs/es6-shim.min.js"></script>
        <script src="./js/libs/EventDispatcher.js"></script>
        <script src="./js/libs/promise.min.js"></script>
-       <script src="./js/libs/zepto.min.js"></script>
 
        <script src="./js/compodoc.js"></script>
 
