--- a/documentation/guards/ResolverDevice.html
+++ b/documentation/guards/ResolverDevice.html
@@ -164,7 +164,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/resolverDevice.ts:10</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/resolverDevice.ts:12</a></div>
                             </td>
                         </tr>
 
@@ -227,8 +227,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="14"
-                                    class="link-to-prism">src/app/resolverDevice.ts:14</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="15"
+                                    class="link-to-prism">src/app/resolverDevice.ts:15</a></div>
                         </td>
                     </tr>
 
@@ -299,11 +299,12 @@ import { ActivatedRouteSnapshot, Resolve, RouterStateSnapshot } from &#x27;@angu
 import { DeviceService } from &#x27;./services/device.service&#x27;
 import { Device } from &#x27;./shared/device&#x27;
 
-@Injectable()
+@Injectable({
+  providedIn: &#x27;root&#x27;, // This ensures it is available application-wide
+})
 export class ResolverDevice implements Resolve&lt;Observable&lt;Device[]&gt;&gt; {
   constructor(private api: DeviceService) {}
 
-  // eslint-disable-next-line @typescript-eslint/no-unused-vars
   resolve(route: ActivatedRouteSnapshot, _state: RouterStateSnapshot): Observable&lt;Device[]&gt; {
     console.log(&#x27;Resolver&#x27;)
     return this.api.GetDevices()
@@ -377,7 +378,6 @@ export class ResolverDevice implements Resolve&lt;Observable&lt;Device[]&gt;&gt;
        <script src="../js/libs/es6-shim.min.js"></script>
        <script src="../js/libs/EventDispatcher.js"></script>
        <script src="../js/libs/promise.min.js"></script>
-       <script src="../js/libs/zepto.min.js"></script>
 
        <script src="../js/compodoc.js"></script>
 
