--- a/documentation/index.html
+++ b/documentation/index.html
@@ -85,14 +85,16 @@
 <h1>3d inventory</h1>
 <ol>
 <li><a href="#3d-inventory">3d inventory</a><ol>
-<li><a href="#about-project">About project</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#motivation">Motivation</a></li>
+<li><a href="#architecture">Architecture</a></li>
 <li><a href="#technology-stack">Technology stack</a></li>
-<li><a href="#demo">Demo</a></li>
+<li><a href="#demo-video">Demo video</a></li>
 <li><a href="#data-model">Data Model</a><ol>
 <li><a href="#logical-model">Logical model</a></li>
 </ol>
 </li>
-<li><a href="#aplication">Aplication</a><ol>
+<li><a href="#application">Application</a><ol>
 <li><a href="#list-devices">List devices</a></li>
 <li><a href="#models">Models</a></li>
 <li><a href="#attributes">Attributes</a></li>
@@ -102,21 +104,19 @@
 </li>
 <li><a href="#run">Run</a></li>
 <li><a href="#deploy">Deploy</a></li>
-<li><a href="#google-cloud">Google Cloud</a></li>
-<li><a href="#apis-repos">APIs repos</a></li>
+<li><a href="#containers">Containers</a></li>
 <li><a href="#contributing">Contributing</a></li>
-<li><a href="#next-todo">Next todo</a></li>
+<li><a href="#license">License</a></li>
 </ol>
 </li>
 </ol>
 <p><a href="https://wakatime.com/badge/user/3bbeedbe-0c6a-4a01-b3cd-a85d319a03bf/project/018c62ce-6164-4200-bca9-be53af7f6d80"><img src="https://wakatime.com/badge/user/3bbeedbe-0c6a-4a01-b3cd-a85d319a03bf/project/018c62ce-6164-4200-bca9-be53af7f6d80.svg" alt="wakatime" class="img-responsive"></a> <a href="https://GitHub.com/karol-preiskorn/3d-inventory-angular-ui/commit/"><img src="https://badgen.net/github/last-commit/karol-preiskorn/3d-inventory-angular-ui" alt="GitHub latest commit" class="img-responsive"></a> <a href="https://GitHub.com/karol-preiskorn/3d-inventory-angular-ui/stargazers/"><img src="https://img.shields.io/github/stars/karol-preiskorn/3d-inventory-angular-ui.svg?style=social&label=Star&maxAge=2592000" alt="GitHub stars" class="img-responsive"></a> <a href="https://GitHub.com/karol-preiskorn/3d-inventory-angular-ui/issues/"><img src="https://img.shields.io/github/issues/karol-preiskorn/3d-inventory-angular-ui.svg" alt="GitHub issues" class="img-responsive"></a>
 <a href="https://lbesson.mit-license.org/"><img src="https://img.shields.io/badge/License-MIT-blue.svg" alt="MIT license" class="img-responsive"></a> <a href="https://www.typescriptlang.org/"><img src="https://img.shields.io/badge/--3178C6?logo=typescript&logoColor=ffffff" alt="TypeScript" class="img-responsive"></a> <a href="https://https://npmjs.com/"><img src="https://badgen.net/badge/icon/npm?icon=npm&label" alt="Npm" class="img-responsive"></a> <a href="https://github.com/karol-preiskorn/3d-inventory-angular-ui/blob/master/LICENSE"><img src="https://badgen.net/github/license/karol-preiskorn/3d-inventory-angular-ui" alt="GitHub license" class="img-responsive"></a></p>
-<h2>About project</h2>
-<p>Project create ✨<code>3d inventory</code>✨— solution that allows you to build a spatial and database representation of yours datacenters.</p>
-<b>Example :</b><div><pre class="line-numbers"><code class="language-none">Motivation
-
-I&#39;m programming to incorporate database systems. This project it is sandbox to covers relevant topics and issues related to create simple and efficient platform for IT inventory.</code></pre></div><img title="Architecture" src="src/assets/architecture.drawio.png" style="filter: drop-shadow(8px 8px 8px black); border-radius: 1%; margin-bottom: 16px" width="85%">
-
+<h2>About</h2>
+<p>Project creates ✨<code>3d inventory</code>✨—a solution that allows you to build a spatial and database representation of your warehouses or datacenters.</p>
+<h2>Motivation</h2>
+<p>I am developing this project as a sandbox to explore database systems. It covers relevant topics and issues related to creating a simple and efficient platform for graphical representation of IT inventory.</p>
+<h2>Architecture</h2>
 <p>Project contain three repos:</p>
 <ul>
 <li>⚓ <a href="https://github.com/karol-preiskorn/3d-inventory-angular-ui">https://github.com/karol-preiskorn/3d-inventory-angular-ui</a></li>
@@ -125,28 +125,28 @@ I&#39;m programming to incorporate database systems. This project it is sandbox 
 </ul>
 <h2>Technology stack</h2>
 <ul>
-<li><code>Angular</code> 17+ - as a Corp framework.</li>
+<li><code>Angular</code> 19+ - as a Corp framework.</li>
 <li><code>Bootstrap</code> 5.3+ - logic for insert <code>UI</code> data</li>
 <li><code>tree.js</code> 163+ - as best graph framework.</li>
-<li><code>MongoAtlas</code>|<code>Oracle</code> - I want in this project try different solution and different data structure and storage datamodels relational and noSQL.</li>
-<li><code>REST</code> - prepared <code>API</code> in use in <code>Swagger</code>.</li>
-<li><code>Podman</code> --&gt; <code>Google Cloud</code> as containers</li>
+<li><code>MongoAtlas</code>|<code>Oracle</code> - I want to try different solutions and data structures, including both relational and NoSQL data models using MongoAtlas and Oracle.</li>
+<li><code>REST</code> - prepared <code>API</code> documented and used in <code>Swagger</code>.</li>
+<li><code>Docker</code> as containers</li>
 </ul>
-<h2>Demo</h2>
-<p>Demo <code>3d inventory</code> use <code>Angular</code> and <code>three.js</code> framework for graphics representation.</p>
-<p><a href="https://youtu.be/rNOxpZ0ti1Q" title="3-d inventory the video"><img title="3-d inventory the video" src="src/assets/img/3d-inventory-demo.png" style="filter: drop-shadow(8px 8px 8px black); border-radius: 1%;" width="85%"/></a></p>
-<p>This project build from this example contain <code>three.js</code> in <code>Angular</code> <a href="https://srivastavaanurag79.medium.com/hello-3d-your-first-three-js-scene-in-angular-176c44b9c6c0">Tutorial to render 3D 3d in Angular + Three.js</a>.</p>
+<h2>Demo video</h2>
+<p>The <code>3d inventory</code> project leverages <code>Angular</code> for building the user interface and utilizes the <code>three.js</code> library to render interactive 3D graphics.</p>
+<p><a href="https://youtu.be/rNOxpZ0ti1Q" title="3-d inventory the video"><img title="3-d inventory the demo video" src="src/assets/img/2025-06-20_12-18_1.png" style="fborder-radius: 1%;filter: drop-shadow(0 0 1rem black); border-radius: 1%;" width="85%"/></a></p>
 <h2>Data Model</h2>
-<p>This is implementation parametric generic attribute class. All attributes for <code>Devices</code>, <code>Models</code> and <code>Connections</code> are stored in this model.</p>
-<p>Parameters types are defined in <code>Attribute Dictionary</code>.</p>
-<p>In <code>Attributes</code> are stored values defined in <code>Attributes Dictionary</code> for <code>Devices</code>, <code>Model</code> and <code>Connections</code>. <code>Attributes Dictionary</code> are defined for specyfice parameters this entities.</p>
+<p>The data model is based on a parametric, generic attribute class. All attributes for <code>Devices</code>, <code>Models</code>, and <code>Connections</code> are stored in this model.</p>
+<p>Parameter types are defined in the <code>Attribute Dictionary</code>.</p>
+<p>Attributes store values defined in the <code>Attribute Dictionary</code> for <code>Devices</code>, <code>Models</code>, and <code>Connections</code>. The <code>Attribute Dictionary</code> specifies parameters for these entities.</p>
+<p>I had a lot of fun learning how to convert relational DB structures to correct collections in NoSQL MongoDB.</p>
 <h3>Logical model</h3>
-<p>Relational data model is maped to noSQL model im MondoDb.</p>
+<p>Relational data model is mapped to a NoSQL model in MongoDB.</p>
 <img title="Logical model" src="src/assets/3d-inventory.png" style="filter: drop-shadow(0 0 1rem black); border-radius: 1%;" width="85%"/>
 
-<h2>Aplication</h2>
+<h2>Application</h2>
 <h3>List devices</h3>
-<img title="List devices" src="src/assets/img/Screenshot%202023-07-14%20at%2008-48-50%203d%20inventory-watermark.png" style="filter: drop-shadow(0 0 1rem black); border-radius: 1%;" width="80%"/>
+<img title="List devices" src="src/assets/img/Screenshot%202023-07-14%20at%2008-48-50%203d%20inventory-watermark.png" style="border-radius: 1%;filter: drop-shadow(0 0 1rem black); border-radius: 1%;" width="80%"/>
 
 <h3>Models</h3>
 <img title="Models" src="src/assets/img/Screenshot%202023-07-14%20at%2008-49-31%203d%20inventory-watermark.png" style="filter: drop-shadow(0 0 1rem black); border-radius: 1%;" width="80%"/>
@@ -164,41 +164,17 @@ I&#39;m programming to incorporate database systems. This project it is sandbox 
 <b>Example :</b><div><pre class="line-numbers"><code class="language-bash">git clone https://github.com/karol-preiskorn/3d-inventory-angular-ui.git
 cd 3d-inventory-angular-ui
 npm install
-npm run start</code></pre></div><p>or run separately <code>json-server</code> and <code>ui</code></p>
-<b>Example :</b><div><pre class="line-numbers"><code class="language-bash">npm run start:json-server
-npm run start:ng</code></pre></div><p>Goto in browser <a href="http://localhost:4200">http://localhost:4200</a></p>
+npm run start</code></pre></div><p>Goto in browser <a href="http://localhost:4200">http://localhost:4200</a>
+<a href="http://localhost:4200/">http://localhost:4200/</a></p>
 <h2>Deploy</h2>
 <p><a href="https://angular.io/guide/deployment">https://angular.io/guide/deployment</a></p>
 <p>Build in first terminal: <code>ng build --watch</code> in npm alias:</p>
-<b>Example :</b><div><pre class="line-numbers"><code class="language-bash">npm run build</code></pre></div><h2>Google Cloud</h2>
-<p>tbc</p>
-<h2>APIs repos</h2>
-<ul>
-<li>Oracle <a href="https://github.com/karol-preiskorn/3d-inventory-oracle-api">3d-inventory-oracle-api</a></li>
-<li>Mongo Atlas ✨ <a href="https://github.com/karol-preiskorn/3d-inventory-mongo-api">3d-inventory-mongo-api</a></li>
-</ul>
+<b>Example :</b><div><pre class="line-numbers"><code class="language-bash">npm run build</code></pre></div><h2>Containers</h2>
+<p>Docker is used for containerization, and deployment to Google Cloud is planned.</p>
 <h2>Contributing</h2>
-<p>Pull requests are welcome. For major changes, please open an <a href="https://github.com/karol-preiskorn/3d-inventory-angular-ui/issues/new">issue</a> first to discuss what you would like to change.
-Please make sure to update tests as appropriate.
-Not forget about <a href="https://github.com/Microsoft/TypeScript/wiki/Coding-guidelines">code guide-lines</a>.</p>
-<h2>Next todo</h2>
-<ul>
-<li><input disabled="" type="checkbox"> connection between showing 3d and defined devices.</li>
-<li><input checked="" disabled="" type="checkbox"> build interfance to Mongo Atlas</li>
-<li><input checked="" disabled="" type="checkbox"> Set position and model in data ans show this data in <code>3d</code>.</li>
-<li><input disabled="" type="checkbox"> Show attributes of <code>DEVICES</code>, <code>MODELS</code> and <code>CONNECTIONS</code>. Waiting for MongoDB|Oracle API.</li>
-<li><input checked="" disabled="" type="checkbox"> Generate <code>FLOOR</code></li>
-<li><input disabled="" type="checkbox"> as array of square (x, y, h)</li>
-<li><input checked="" disabled="" type="checkbox"> Use <code>Mongo</code> to strore <code>JSON</code> data. (starting)</li>
-<li><input checked="" disabled="" type="checkbox"> <code>Docker</code> -&gt; serve application in <code>Github Pages</code> --&gt; <code>AWS EC2</code></li>
-<li><input disabled="" type="checkbox"> Use Dev container in <code>GitHub</code> for development.</li>
-<li><input disabled="" type="checkbox"> Recognize <code>Grunt</code>/<code>Glup</code> to <code>CI</code>/<code>DI</code> use in this project.</li>
-<li><input checked="" disabled="" type="checkbox"> Add actual tasks form <code>GitHub</code> during build in README.md.</li>
-<li><input checked="" disabled="" type="checkbox"> Add light/dark theme switch in <code>UI</code></li>
-<li><input disabled="" type="checkbox"> Use <a href="https://formly.dev/">https://formly.dev/</a> ?</li>
-<li><input disabled="" type="checkbox"> Create blog on GitHub Pages or use <a href="https://ultimasolution.pl">https://ultimasolution.pl</a></li>
-<li><input disabled="" type="checkbox"> Try use NgDoc to document how to use code <a href="https://medium.com/@askoropad/ngdoc-documentation-for-angular-projects-3f6ea8fc22b0">https://medium.com/@askoropad/ngdoc-documentation-for-angular-projects-3f6ea8fc22b0</a></li>
-</ul>
+<p>Pull requests are welcome. For major changes, please open an <a href="https://github.com/karol-preiskorn/3d-inventory-angular-ui/issues/new">issue</a> first to discuss what you would like to change. Please make sure to update tests as appropriate. Do not forget about <a href="https://github.com/Microsoft/TypeScript/wiki/Coding-guidelines">code guidelines</a>.</p>
+<h2>License</h2>
+<p><a href="https://github.com/karol-preiskorn/3d-inventory-angular-ui/LICENSE">Creative Commons Legal Code</a></p>
 
 
 
@@ -274,7 +250,6 @@ Not forget about <a href="https://github.com/Microsoft/TypeScript/wiki/Coding-gu
        <script src="./js/libs/es6-shim.min.js"></script>
        <script src="./js/libs/EventDispatcher.js"></script>
        <script src="./js/libs/promise.min.js"></script>
-       <script src="./js/libs/zepto.min.js"></script>
 
        <script src="./js/compodoc.js"></script>
 
