--- a/documentation/injectables/AttributeService.html
+++ b/documentation/injectables/AttributeService.html
@@ -171,9 +171,11 @@
                                 <a href="#GetAttributes" >GetAttributes</a>
                             </li>
                             <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#GetAttributesSync" >GetAttributesSync</a>
                             </li>
                             <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#GetContextAttributes" >GetContextAttributes</a>
                             </li>
                             <li>
@@ -216,7 +218,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/services/attribute.service.ts:20</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/services/attribute.service.ts:19</a></div>
                             </td>
                         </tr>
 
@@ -339,8 +341,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="173"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:173</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="192"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:192</a></div>
                         </td>
                     </tr>
 
@@ -416,8 +418,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="161"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:161</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="180"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:180</a></div>
                         </td>
                     </tr>
 
@@ -491,8 +493,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="150"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:150</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="169"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:169</a></div>
                         </td>
                     </tr>
 
@@ -566,8 +568,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="204"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:204</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="223"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:223</a></div>
                         </td>
                     </tr>
 
@@ -643,8 +645,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="139"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:139</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="158"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:158</a></div>
                         </td>
                     </tr>
 
@@ -718,8 +720,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="40"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:40</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="39"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:39</a></div>
                         </td>
                     </tr>
 
@@ -747,6 +749,7 @@
                 <td class="col-md-4">
                     <a name="GetAttributesSync"></a>
                     <span class="name">
+                            <span class="modifier">Async</span>
                         <span ><b>GetAttributesSync</b></span>
                         <a href="#GetAttributesSync"><span class="icon ion-ios-link"></span></a>
                     </span>
@@ -754,30 +757,31 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>GetAttributesSync()</code>
+                        <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>GetAttributesSync()</code>
                 </td>
             </tr>
 
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="53"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:53</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="52"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:52</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                        <div class="io-description"><p>Retrieves the attributes synchronously.</p>
+                        <div class="io-description"><p>Retrieves the attributes asynchronously.</p>
 </div>
 
                         <div class="io-description">
-                            <b>Returns : </b>        <code><a href="../classes/Attribute.html" target="_self" >Attribute[]</a></code>
+                            <b>Returns : </b>        <code><a href="../classes/Attribute.html" target="_self" >Promise&lt;Attribute[]&gt;</a></code>
 
                         </div>
                             <div class="io-description">
-                                <p>An array of attributes.</p>
+                                <p>A promise that resolves to an array of attributes.</p>
 
                             </div>
                 </td>
@@ -790,6 +794,7 @@
                 <td class="col-md-4">
                     <a name="GetContextAttributes"></a>
                     <span class="name">
+                            <span class="modifier">Async</span>
                         <span ><b>GetContextAttributes</b></span>
                         <a href="#GetContextAttributes"><span class="icon ion-ios-link"></span></a>
                     </span>
@@ -797,15 +802,16 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>GetContextAttributes(component: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, item: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
+                        <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>GetContextAttributes(component: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, item: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
                 </td>
             </tr>
 
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="107"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:107</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="114"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:114</a></div>
                         </td>
                     </tr>
 
@@ -868,7 +874,7 @@
                                 </table>
                             </div>
                         <div class="io-description">
-                            <b>Returns : </b>        <code><a href="../classes/Attribute.html" target="_self" >Attribute[]</a></code>
+                            <b>Returns : </b>        <code><a href="../classes/Attribute.html" target="_self" >Promise&lt;Attribute[]&gt;</a></code>
 
                         </div>
                             <div class="io-description">
@@ -899,8 +905,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="66"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:66</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="73"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:73</a></div>
                         </td>
                     </tr>
 
@@ -976,8 +982,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="80"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:80</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="87"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:87</a></div>
                         </td>
                     </tr>
 
@@ -1051,8 +1057,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="95"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:95</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="102"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:102</a></div>
                         </td>
                     </tr>
 
@@ -1128,8 +1134,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="222"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:222</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="241"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:241</a></div>
                         </td>
                     </tr>
 
@@ -1206,7 +1212,7 @@
                                 </table>
                             </div>
                         <div class="io-description">
-                            <b>Returns : </b>    <code>(error: Error) &#x3D;&gt; Observable&lt;T&gt;</code>
+                            <b>Returns : </b>    <code>(error: HttpErrorResponse) &#x3D;&gt; Observable&lt;T&gt;</code>
 
                         </div>
                             <div class="io-description">
@@ -1236,8 +1242,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="193"
-                                    class="link-to-prism">src/app/services/attribute.service.ts:193</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="212"
+                                    class="link-to-prism">src/app/services/attribute.service.ts:212</a></div>
                         </td>
                     </tr>
 
@@ -1335,7 +1341,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/services/attribute.service.ts:20</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/services/attribute.service.ts:19</a></div>
                         </td>
                     </tr>
 
@@ -1370,7 +1376,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/services/attribute.service.ts:30</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/app/services/attribute.service.ts:29</a></div>
                         </td>
                     </tr>
 
@@ -1383,11 +1389,10 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Observable, of, throwError } from &#x27;rxjs&#x27;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Observable, of, throwError, firstValueFrom } from &#x27;rxjs&#x27;
 import { catchError, retry } from &#x27;rxjs/operators&#x27;
-import { SyncRequestClient } from &#x27;ts-sync-request/dist&#x27;
 
-import { HttpClient, HttpHeaders } from &#x27;@angular/common/http&#x27;
+import { HttpClient, HttpHeaders, HttpErrorResponse } from &#x27;@angular/common/http&#x27;
 import { Injectable, NgZone } from &#x27;@angular/core&#x27;
 import { Router } from &#x27;@angular/router&#x27;
 
@@ -1432,15 +1437,23 @@ export class AttributeService {
   }
 
   /**
-   * Retrieves the attributes synchronously.
-   * @returns An array of attributes.
+   * Retrieves the attributes asynchronously.
+   * @returns A promise that resolves to an array of attributes.
    */
-  GetAttributesSync(): Attribute[] {
-    let attributes: Attribute[] &#x3D; []
-    const url &#x3D; environment.baseurl + &#x27;/attributes/&#x27;
-    attributes &#x3D; new SyncRequestClient().get&lt;Attribute[]&gt;(url)
-    console.log(&#x27;GetAttributesSync.attributes: &#x27; + JSON.stringify(attributes, null, &#x27; &#x27;))
-    return attributes
+  async GetAttributesSync(): Promise&lt;Attribute[]&gt; {
+    const url &#x3D; &#x60;${environment.baseurl}/attributes/&#x60;
+    try {
+      const attributes &#x3D; await firstValueFrom(
+        this.http.get&lt;Attribute[]&gt;(url, this.httpOptions).pipe(
+          retry(1),
+          catchError(() &#x3D;&gt; of([] as Attribute[])),
+        ),
+      )
+      return attributes ?? []
+    } catch (error) {
+      console.error(&#x27;GetAttributesSync error:&#x27;, error)
+      return []
+    }
   }
 
   /**
@@ -1489,7 +1502,7 @@ export class AttributeService {
    * @param item - The item in JSON format.
    * @returns An array of Attribute objects representing the context attributes.
    */
-  GetContextAttributes(component: string, item: string): Attribute[] {
+  async GetContextAttributes(component: string, item: string): Promise&lt;Attribute[]&gt; {
     let attributes: Attribute[] &#x3D; []
     let device: Device &#x3D; new Device()
     console.warn(&#x27;JSON.parse(item): &#x27; + item)
@@ -1501,12 +1514,24 @@ export class AttributeService {
     const url_model &#x3D; environment.baseurl + &#x27;/attributes/model/&#x27; + device.modelId
     const url_device &#x3D; environment.baseurl + &#x27;/attributes/device/&#x27; + device._id
     try {
-      attributes &#x3D; new SyncRequestClient().get&lt;Attribute[]&gt;(url_model)
+      attributes &#x3D; await firstValueFrom(
+        this.http.get&lt;Attribute[]&gt;(url_model, this.httpOptions).pipe(
+          retry(1),
+          catchError(() &#x3D;&gt; of([] as Attribute[])),
+        ),
+      )
     } catch (error) {
       console.error(&#x27;SyncRequestClient().get&lt;Attribute[]&gt;: &#x27; + url_model + &#x27; &#x27; + error)
     }
     try {
-      attributes.push(...new SyncRequestClient().get&lt;Attribute[]&gt;(url_device))
+      attributes.push(
+        ...(await firstValueFrom(
+          this.http.get&lt;Attribute[]&gt;(url_device, this.httpOptions).pipe(
+            retry(1),
+            catchError(() &#x3D;&gt; of([] as Attribute[])),
+          ),
+        )),
+      )
     } catch (error) {
       console.error(&#x27;SyncRequestClient().get&lt;Attribute[]&gt;: &#x27; + url_device + &#x27; &#x27; + error)
     }
@@ -1545,7 +1570,7 @@ export class AttributeService {
    */
   CreateAttribute(data: Attribute): Observable&lt;Attribute&gt; {
     return this.http
-      .post&lt;Attribute&gt;(environment.baseurl + &#x27;/attributes/&#x27;, JSON.stringify(data, null, &#x27; &#x27;), this.httpOptions)
+      .post&lt;Attribute&gt;(environment.baseurl + &#x27;/attributes/&#x27;, JSON.stringify(data), this.httpOptions)
       .pipe(retry(1), catchError(this.handleErrorTemplate&lt;Attribute&gt;(&#x27;CreateAttribute&#x27;, data)))
   }
 
@@ -1593,7 +1618,7 @@ export class AttributeService {
     } else {
       errorMessage &#x3D; &#x60;Error Code: ${error.status}\nMessage: ${error.message}&#x60;
     }
-    console.log(JSON.stringify(errorMessage, null, &#x27; &#x27;))
+    console.error(&#x60;attribute.service.errorHandl: Error Code: ${error.status}, Message: ${error.message}&#x60;)
     return throwError(() &#x3D;&gt; {
       return errorMessage
     })
@@ -1605,8 +1630,10 @@ export class AttributeService {
    * @param result - optional value to return as the observable result
    */
   private handleErrorTemplate&lt;T&gt;(operation &#x3D; &#x27;operation&#x27;, result?: T) {
-    return (error: Error): Observable&lt;T&gt; &#x3D;&gt; {
-      console.error(&#x60;attribute.service.handleErrorTemplate: ${operation} failed: ${error.message}&#x60;)
+    return (error: HttpErrorResponse): Observable&lt;T&gt; &#x3D;&gt; {
+      if (result &#x3D;&#x3D;&#x3D; undefined || result &#x3D;&#x3D;&#x3D; null) {
+        console.warn(&#x60;attribute.service.handleErrorTemplate: ${operation} returned a null or undefined result.&#x60;)
+      }
       return of(result as T)
     }
   }
@@ -1682,7 +1709,6 @@ export class AttributeService {
        <script src="../js/libs/es6-shim.min.js"></script>
        <script src="../js/libs/EventDispatcher.js"></script>
        <script src="../js/libs/promise.min.js"></script>
-       <script src="../js/libs/zepto.min.js"></script>
 
        <script src="../js/compodoc.js"></script>
 
