--- a/documentation/interfaces/LogIn.html
+++ b/documentation/interfaces/LogIn.html
@@ -130,7 +130,7 @@
                 <h3>Description</h3>
             </p>
             <p class="comment">
-                <p>Represents the input for creating a log entry.</p>
+                <p>Represents the input structure for creating a new log entry.</p>
 
             </p>
 
@@ -328,14 +328,14 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { catchError, Observable, of, retry, throwError } from &#x27;rxjs&#x27;
 
 import { HttpClient, HttpErrorResponse, HttpHeaders } from &#x27;@angular/common/http&#x27;
-import { Injectable, Input } from &#x27;@angular/core&#x27;
+import { Injectable } from &#x27;@angular/core&#x27;
 
 import { environment } from &#x27;../../environments/environment&#x27;
 
 /**
  * Represents the parameters for retrieving logs.
  */
-export interface LogParamteres {
+export interface LogParameters {
   component: string
   id: string // id set then show id object logs
 }
@@ -349,11 +349,18 @@ export interface Log {
   objectId?: string
   operation: string // [create, update, delete, clone]
   component: string // [device, model, category, floor]
-  message: object // object json
+  message: Record&lt;string, any&gt; // object json
 }
 
 /**
  * Represents the input for creating a log entry.
+ */
+/**
+ * Represents the input structure for creating a new log entry.
+ * @property objectId - (Optional) The ID of the related object.
+ * @property operation - The operation performed (e.g., create, update, delete, clone).
+ * @property component - The component associated with the log (e.g., device, model, category, floor).
+ * @property message - The log message as a JSON object.
  */
 export interface LogIn {
   objectId?: string
@@ -367,7 +374,7 @@ export interface LogIn {
 })
 export class LogService {
   baseurl &#x3D; environment.baseurl
-  @Input() attributeComponentId?: string
+  attributeComponentId?: string
 
   constructor(private http: HttpClient) {}
 
@@ -391,8 +398,8 @@ export class LogService {
    * @returns An Observable that emits an array of Log objects.
    */
   GetComponentLogs(component: string): Observable&lt;Log[]&gt; {
-    const url &#x3D; environment.baseurl + &#x27;/logs/component/&#x27; + component.toLowerCase()
-    console.log(&#x27;LogComponent.GetComponentLogs(&#x27; + component.toLowerCase() + &#x27;): &#x27; + url)
+    const url &#x3D; environment.baseurl + &#x27;/logs/component/&#x27; + component
+    console.log(&#x27;[log.service.GetComponentLogs(&#x27; + component + &#x27;)]: &#x27; + url)
     return this.http.get&lt;Log[]&gt;(url).pipe(retry(1), catchError(this.handleError))
   }
 
@@ -402,7 +409,7 @@ export class LogService {
    * @returns An Observable that emits an array of Log objects.
    */
   GetDeviceLogs(id: string): Observable&lt;Log[]&gt; {
-    const url &#x3D; environment.baseurl + &#x27;/logs/device/&#x27; + id
+    const url &#x3D; environment.baseurl + &#x27;/logs/devices/&#x27; + id
     console.log(&#x27;LogComponent.GetDeviceLogs(&#x27; + id + &#x27;) &#x27; + url)
     return this.http.get&lt;Log[]&gt;(url).pipe(retry(1), catchError(this.handleError))
   }
@@ -413,33 +420,19 @@ export class LogService {
    * @returns An Observable that emits an array of Log objects.
    */
   GetAttributeLogs(id: string): Observable&lt;Log[]&gt; {
-    const url &#x3D; environment.baseurl + &#x27;/logs/attribute/&#x27; + id
+    const url &#x3D; environment.baseurl + &#x27;/logs/attributes/&#x27; + id
     console.log(&#x27;LogComponent.GetAttributeLogs(&#x27; + id + &#x27;) &#x27; + url)
     return this.http.get&lt;Log[]&gt;(url).pipe(retry(1), catchError(this.handleError))
   }
 
   /**
-   * Retrieves logs for a specific object.
-   * @param objectId - The object ID.
-   * @returns An Observable that emits an array of Log objects.
-   */
-  GetObjectLogs(objectId: string): Observable&lt;Log[]&gt; {
-    if (objectId &#x3D;&#x3D; null) {
-      return of([])
-    }
-    const url &#x3D; environment.baseurl + &#x27;/logs/object/&#x27; + objectId
-    console.log(&#x27;LogService.GetObjectLogs: &#x27; + url + &#x27;, objectId: &#x27; + objectId)
-    return this.http.get&lt;Log[]&gt;(url).pipe(catchError(this.handleErrorTemplate&lt;Log[]&gt;(&#x27;GetObjectsLogs&#x27;, [])))
-  }
-
-  /**
    * Retrieves a log by ID.
-   * @param id - The log ID.
+   * @param id - The all logs with ObjectID &#x3D; id.
    * @returns An Observable that emits a Log object.
    */
-  GetLogId(id: string): Observable&lt;Log&gt; {
+  GetLogsById(id: string): Observable&lt;Log[]&gt; {
     return this.http
-      .get&lt;Log&gt;(environment.baseurl + &#x27;/logs/&#x27; + id, this.httpOptions)
+      .get&lt;Log[]&gt;(environment.baseurl + &#x27;/logs/&#x27; + id, this.httpOptions)
       .pipe(retry(1), catchError(this.handleError))
   }
 
@@ -454,22 +447,18 @@ export class LogService {
       .pipe(retry(1), catchError(this.handleError))
   }
 
+  private getLogsUrl(): string {
+    return &#x60;${environment.baseurl}/logs&#x60;
+  }
+
   /**
    * Creates a new log entry.
-   * @param data - The log input data.
-   * @returns An Observable that emits a Log or LogIn object.
+   * @param data - The log data to create.
+   * @returns An Observable that emits the created Log object.
    */
-  CreateLog(data: LogIn): Observable&lt;Log | LogIn&gt; {
-    const log: LogIn &#x3D; {
-      objectId: data.objectId,
-      operation: data.operation,
-      component: data.component,
-      message: data.message,
-    }
-    console.log(&#x27;LogService.CreateLog: &#x27; + JSON.stringify(log, null, &#x27; &#x27;))
-    return this.http
-      .post&lt;Log | LogIn&gt;(&#x60;${environment.baseurl}/logs/&#x60;, log, this.httpOptions)
-      .pipe(retry(1), catchError(this.handleErrorTemplate&lt;LogIn&gt;(&#x27;CreateLog&#x27;, log)))
+  CreateLog(data: LogIn): Observable&lt;Log&gt; {
+    console.log(&#x27;LogService.CreateLog: &#x27; + JSON.stringify(data, null, 2))
+    return this.http.post&lt;Log&gt;(this.getLogsUrl(), data, this.httpOptions).pipe(retry(1), catchError(this.handleError))
   }
 
   /**
@@ -478,40 +467,49 @@ export class LogService {
    * @param data - The updated log data.
    * @returns An Observable that emits a Log object.
    */
-  UpdateLog(id: string | null, data: JSON): Observable&lt;Log | LogIn&gt; {
-    const sData &#x3D; JSON.stringify(data, null, &#x27; &#x27;)
+  UpdateLog(id: string | null, data: any): Observable&lt;Log | LogIn | null&gt; {
+    const sData &#x3D; JSON.stringify(data, null, 2)
     return this.http
       .put&lt;Log | LogIn&gt;(environment.baseurl + &#x27;/logs/&#x27; + id, sData, this.httpOptions)
-      .pipe(retry(1), catchError(this.handleErrorTemplate&lt;LogIn&gt;(&#x27;UpdateLog&#x27;, data as unknown as LogIn)))
+      .pipe(retry(1), catchError(this.handleErrorTemplate&lt;LogIn | null&gt;(&#x27;UpdateLog&#x27;, null)))
   }
 
   /**
-   * Handles the error response from an HTTP request.
-   * If the error status is 0, it logs the error message.
-   * Otherwise, it logs the error status and body.
-   * Returns an Observable that throws an Error.
+   * Handles the error response from an HTTP request. If the error status is 0, it logs the error message.
+   * Otherwise, it logs the error status and body. Returns an Observable that throws an Error.
    * @param error - The HttpErrorResponse object.
    * @returns An Observable that throws an Error.
    */
-  private handleError(error: HttpErrorResponse) {
+  private handleError(error: HttpErrorResponse): Observable&lt;never&gt; {
+    // If error.status is 0, it indicates a client-side or network error occurred.
     if (error.status &#x3D;&#x3D;&#x3D; 0) {
-      console.error(&#x27;An error occurred:&#x27;, error.error)
+      console.error(&#x27;An unknown error occurred:&#x27;, error)
+      return throwError(() &#x3D;&gt; new Error(&#x27;An unknown error occurred. Please check the logs for more details.&#x27;))
     } else {
-      console.error(&#x60;Backend returned code ${error.status}, body was: &#x60;, error.error)
+      // If error.status is not 0, it indicates a server-side error with a specific status code.
+      const errorMsg &#x3D; &#x60;HTTP error occurred (status: ${error.status}): ${error.message || &#x27;No error message provided&#x27;}${error.error ? &#x27; | Details: &#x27; + JSON.stringify(error.error) : &#x27;&#x27;}&#x60;
+      return throwError(() &#x3D;&gt; new Error(errorMsg))
     }
-    return throwError(() &#x3D;&gt; new Error(&#x27;Something bad happened; please try again later.&#x27;))
   }
 
   /**
    * Handle Http operation that failed. Let the app continue.
    *
-   * @param operation - name of the operation that failed
-   * @param result - optional value to return as the observable result
+   * @param operationName - Name of the operation that failed.
+   * @param result - Optional fallback value to return as the observable result in case of an error.
+   *                 This value is used to allow the application to continue functioning gracefully
+   *                 even when an error occurs.
    */
-  private handleErrorTemplate&lt;T&gt;(operation &#x3D; &#x27;operation&#x27;, result?: T) {
-    return (error: Error): Observable&lt;T&gt; &#x3D;&gt; {
-      console.error(&#x60;LogService.handleErrorTemplate: ${operation} failed: ${error.message}&#x60;)
-      return of(result as T)
+  private handleErrorTemplate&lt;T&gt;(operationName &#x3D; &#x27;operation&#x27;, result?: T) {
+    return (error: HttpErrorResponse): Observable&lt;T&gt; &#x3D;&gt; {
+      if (environment.production) {
+        console.error(&#x60;LogService.handleErrorTemplate: ${operationName} failed. Error message: ${error.message}&#x60;)
+      } else {
+        console.error(&#x60;LogService.handleErrorTemplate: ${operationName} failed. Error message: ${error.message}&#x60;, error)
+      }
+      // Return the provided fallback result, or null if not specified
+      const fallbackResult &#x3D; result !&#x3D;&#x3D; undefined ? result : null
+      return of(fallbackResult as T)
     }
   }
 }
@@ -580,7 +578,6 @@ export class LogService {
        <script src="../js/libs/es6-shim.min.js"></script>
        <script src="../js/libs/EventDispatcher.js"></script>
        <script src="../js/libs/promise.min.js"></script>
-       <script src="../js/libs/zepto.min.js"></script>
 
        <script src="../js/compodoc.js"></script>
 
