--- a/documentation/miscellaneous/variables.html
+++ b/documentation/miscellaneous/variables.html
@@ -112,12 +112,6 @@
                 <td class="col-md-4">
                     <ul class="index-list">
                         <li>
-                            <a href="#api" title="src/app/components/log/log.component.ts" ><b>api</b>&nbsp;&nbsp;&nbsp;(src/.../log.component.ts)</a>
-                        </li>
-                        <li>
-                            <a href="#debug" title="src/app/shared/device.ts" ><b>debug</b>&nbsp;&nbsp;&nbsp;(src/.../device.ts)</a>
-                        </li>
-                        <li>
                             <a href="#environment" title="src/environments/environment.prod.ts" ><b>environment</b>&nbsp;&nbsp;&nbsp;(src/.../environment.prod.ts)</a>
                         </li>
                         <li>
@@ -130,68 +124,6 @@
     </table>
 </section>
 
-    <h3>src/app/components/log/log.component.ts</h3>
-    <section data-compodoc="block-properties">
-    <h3></h3>    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="api"></a>
-                    <span class="name">
-                        <span ><b>api</b></span>
-                        <a href="#api"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>    <code>[]</code>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Default value : </i><code>[
-  { component: &#x27;Models&#x27;, api: &#x27;models&#x27; },
-  { component: &#x27;Devices&#x27;, api: &#x27;devices&#x27; },
-  { component: &#x27;Logs&#x27;, api: &#x27;logs&#x27; },
-  { component: &#x27;Attributes&#x27;, api: &#x27;attributes&#x27; },
-  { component: &#x27;Attribute Dictionary&#x27;, api: &#x27;attribute-dictionary&#x27; },
-  { component: &#x27;Connection&#x27;, api: &#x27;connections&#x27; },
-  { component: &#x27;Connections&#x27;, api: &#x27;connections&#x27; },
-  { component: &#x27;Floors&#x27;, api: &#x27;floors&#x27; },
-  { component: &#x27;3d&#x27;, api: &#x27;3d&#x27; },
-]</code>
-                    </td>
-                </tr>
-
-
-        </tbody>
-    </table>
-</section>
-    <h3>src/app/shared/device.ts</h3>
-    <section data-compodoc="block-properties">
-    <h3></h3>    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="debug"></a>
-                    <span class="name">
-                        <span ><b>debug</b></span>
-                        <a href="#debug"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Default value : </i><code>true</code>
-                    </td>
-                </tr>
-
-
-        </tbody>
-    </table>
-</section>
     <h3>src/environments/environment.prod.ts</h3>
     <section data-compodoc="block-properties">
     <h3></h3>    <table class="table table-sm table-bordered">
@@ -247,19 +179,11 @@
                     <td class="col-md-4">
                         <i>Default value : </i><code>{
   production: false,
-  baseurl: &#x27;http://localhost:8080&#x27;,
+  baseurl: &#x27;https://172.17.0.2:3001&#x27;, 
 }</code>
                     </td>
                 </tr>
 
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-description"><p>This file can be replaced during build by using the <code>fileReplacements</code> array.
-<code>ng build</code> replaces <code>environment.ts</code> with <code>environment.prod.ts</code>.
-The list of file replacements can be found in <code>angular.json</code>.</p>
-</div>
-                </td>
-            </tr>
 
         </tbody>
     </table>
@@ -321,7 +245,6 @@ The list of file replacements can be found in <code>angular.json</code>.</p>
        <script src="../js/libs/es6-shim.min.js"></script>
        <script src="../js/libs/EventDispatcher.js"></script>
        <script src="../js/libs/promise.min.js"></script>
-       <script src="../js/libs/zepto.min.js"></script>
 
        <script src="../js/compodoc.js"></script>
 
